# AndroidStreamMediaProject

./: .gitignore  gradle.properties  settings.gradle
Commonlib/: build.gradle  proguard-rules.pro
Commonlib/src/main/: AndroidManifest.xml
Commonlib/src/main/java/com/lib/commonlib/: CommonLib.java
Commonlib/src/main/java/com/lib/commonlib/broadcast/: AudioStatusReceiver.java  NetworkStatusReceiver.java
Commonlib/src/main/java/com/lib/commonlib/dispatch/: MessageCallback.java  MessageDispatch.java  MessageTimeout.java
Commonlib/src/main/java/com/lib/commonlib/http/: HttpRequestCallback.java  OkHttpClientImpl.java  OkHttpFactory.java  PrimaryHttpClient.java
Commonlib/src/main/java/com/lib/commonlib/log/: LogParam.java  LogStorage.java
Commonlib/src/main/java/com/lib/commonlib/net/: IpUtils.java
Commonlib/src/main/java/com/lib/commonlib/net/client/: AbConnectImpl.java  DefaultTcpClient.java  DefaultUdpClient.java
Commonlib/src/main/java/com/lib/commonlib/net/intefaces/: HeartBeatLogic.java  IConnect.java  IConnectCallBack.java
Commonlib/src/main/java/com/lib/commonlib/net/message/: NetMessage.java
Commonlib/src/main/java/com/lib/commonlib/net/param/: ConnectionParam.java  ConnectionState.java
Commonlib/src/main/java/com/lib/commonlib/net/ping/: DefaultHeartbeatLogic.java
Commonlib/src/main/java/com/lib/commonlib/task/: BaseTask.java
Commonlib/src/main/java/com/lib/commonlib/utils/: BitmapUtils.java  DataJsonTranslation.java  FileUtil.java  MLog.java  PermssionUtils.java  PowerManagerUtils.java  SharedPreferencesUtil.java  SoLoadUtils.java  ThreadUtils.java  VersionTools.java  WindowUtils.java
Commonlib/src/main/java/com/lib/commonlib/utils/bytes/: ByteTools.java
Commonlib/src/main/java/com/lib/commonlib/utils/network/: NetworkUtil.java  TelephonyUtil.java
Commonlib/src/main/java/com/lib/commonlib/utils/time/: DateTimeUtils.java
Commonlib/src/main/java/com/lib/commonlib/uuid/: UUIDGenerator.java
StreamMediaDemo/: build.gradle
StreamMediaDemo/src/androidTest/java/com/stream/media/demo/: ExampleInstrumentedTest.java
StreamMediaDemo/src/main/: AndroidManifest.xml
StreamMediaDemo/src/main/java/com/stream/media/demo/activity/: LaunchActivity.java  PlayerActivity.java
StreamMediaDemo/src/main/res/layout/: activity_launch.xml  activity_player.xml
StreamMediaDemo/src/main/res/values/: strings.xml
StreamMediaDemo/src/test/java/com/stream/media/demo/: ExampleUnitTest.java
StreamMediaLib/: .gitignore  CMakeLists.txt  build.gradle
StreamMediaLib/src/androidTest/java/com/kelinlang/stream/media/lib/: ExampleInstrumentedTest.java
StreamMediaLib/src/main/: AndroidManifest.xml
StreamMediaLib/src/main/cpp/: CMakeLists.txt
StreamMediaLib/src/main/cpp/audio/: OpenSlAudioPlay.cpp  OpenSlAudioPlay.h  buf_manager.h
StreamMediaLib/src/main/cpp/codec/: AndroidMediaCodec.cpp  AndroidMediaCodec.h  AndroidMediaFormat.cpp  AndroidMediaFormat.h  FdkAacDecode.cpp  FdkAacDecode.h
StreamMediaLib/src/main/cpp/display/: AndroidVideoDisplay.cpp  AndroidVideoDisplay.h
StreamMediaLib/src/main/cpp/jni/: MediaPlayerJni.cpp  MediaPushJni.cpp  com_kelinlang_stream_media_lib_jni_MediaPlayerJni.h  com_kelinlang_stream_media_lib_jni_StreamMediaJni.h  com_stream_media_jni_MediaJni.h  com_stream_media_jni_MediaPlayerJni.h
StreamMediaLib/src/main/cpp/log/: cloudvoice_android_log.c  cloudvoice_android_log.h
StreamMediaLib/src/main/cpp/opengl/: cloudvoice_shader_utils.cpp  cloudvoice_shader_utils.h
StreamMediaLib/src/main/cpp/player/: AndroidPlayer.cpp  AndroidPlayer.h
StreamMediaLib/src/main/cpp/push/: AndroidPusher.cpp  AndroidPusher.h
StreamMediaLib/src/main/java/com/kelinlang/stream/media/lib/: MediaManager.java
StreamMediaLib/src/main/java/com/kelinlang/stream/media/lib/jni/: MediaPlayerJni.java  PlayerParam.java  StreamMediaJni.java
StreamMediaLib/src/main/java/com/stream/media/: MediaManager.java
StreamMediaLib/src/main/java/com/stream/media/camera/: Camera2Impl.java  CameraInterface.java  CameraParam.java  ImageUtil.java  PreviewDataCallback.java
StreamMediaLib/src/main/java/com/stream/media/codec/: ArrayUtils.java  CodecUtils.java  FileStorage.java  VideoConstants.java  VideoDecode.java  VideoEncoder.java  VideoParam.java
StreamMediaLib/src/main/java/com/stream/media/jni/: AudioData.java  MediaDataCallback.java  MediaJni.java  MediaParam.java  MediaPlayerJni.java  MediaStatusCallback.java  PlayerParam.java  StreamParam.java  VideoData.java
StreamMediaLib/src/main/java/com/stream/media/view/: CameraPriviewView.java  MediaPlayerView.java  VideoDisplayView.java
StreamMediaLib/src/main/res/values/: strings.xml
StreamMediaLib/src/test/java/com/kelinlang/stream/media/lib/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/kelinlang/stream/media/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kelinlang/stream/media/demo/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/kelinlang/stream/media/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
